--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,78 +2,67 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
+	android:id="@+id/root_layout"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	android:fitsSystemWindows="true"
 	tools:context=".MainActivity">
 
-	<com.google.android.material.appbar.AppBarLayout
-		android:id="@+id/app_bar"
-		android:layout_width="match_parent"
-		android:layout_height="@dimen/app_bar_height"
-		android:fitsSystemWindows="true"
-		android:theme="@style/Theme.DinDinTest.AppBarOverlay">
-
-		<com.google.android.material.appbar.CollapsingToolbarLayout
-			android:id="@+id/toolbar_layout"
-			android:layout_width="match_parent"
-			android:layout_height="match_parent"
-			android:fitsSystemWindows="true"
-			app:layout_scrollFlags="scroll|exitUntilCollapsed"
-			app:statusBarScrim="@android:color/transparent">
-
-			<ImageView
-				android:layout_width="match_parent"
-				android:layout_height="match_parent"
-				android:fitsSystemWindows="true"
-				android:scaleType="center"
-				android:src="@drawable/bg"
-				app:layout_collapseMode="parallax" />
-
-			<androidx.viewpager2.widget.ViewPager2
-				android:id="@+id/pager"
-				android:layout_width="match_parent"
-				android:layout_height="match_parent"
-				android:fitsSystemWindows="true" />
-
-			<com.google.android.material.tabs.TabLayout
-				android:id="@+id/tabs"
-				android:layout_width="match_parent"
-				android:layout_height="20dp"
-				android:layout_gravity="center_horizontal|bottom"
-				android:layout_margin="8dp"
-				android:background="@null"
-				app:tabBackground="@drawable/tab_selector"
-				app:tabGravity="center"
-				app:tabIndicatorHeight="0dp"
-				app:tabMaxWidth="20dp" />
-
-			<TextView
-				android:id="@+id/title"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:gravity="center"
-				android:minHeight="?actionBarSize"
-				android:padding="@dimen/appbar_padding"
-				android:text="@string/app_name"
-				android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
-				app:layout_collapseMode="none" />
-		</com.google.android.material.appbar.CollapsingToolbarLayout>
-	</com.google.android.material.appbar.AppBarLayout>
-
-	<androidx.core.widget.NestedScrollView
+	<androidx.constraintlayout.motion.widget.MotionLayout
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		android:fitsSystemWindows="true"
-		app:layout_behavior="@string/appbar_scrolling_view_behavior">
+		app:layoutDescription="@xml/main_scene">
+
+		<androidx.viewpager2.widget.ViewPager2
+			android:id="@+id/pager"
+			android:layout_width="match_parent"
+			android:layout_height="0dp"
+			android:background="@drawable/bg"
+			app:layout_constraintHeight_percent=".75"
+			app:layout_constraintTop_toTopOf="parent"
+			app:layout_constraintBottom_toBottomOf="@id/corners" />
+
+		<com.google.android.material.tabs.TabLayout
+			android:id="@+id/tabs"
+			android:layout_width="match_parent"
+			android:layout_height="20dp"
+			android:layout_marginBottom="@dimen/title_top_margin"
+			android:background="@null"
+			app:tabBackground="@drawable/tab_selector"
+			app:tabGravity="center"
+			app:tabIndicatorHeight="0dp"
+			app:tabMaxWidth="20dp"
+			app:layout_constraintBottom_toBottomOf="@id/pager" />
 
 		<TextView
+			android:id="@+id/title"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_margin="@dimen/text_margin"
-			android:fitsSystemWindows="true"
-			android:text="@string/large_text" />
-	</androidx.core.widget.NestedScrollView>
+			android:layout_marginTop="@dimen/title_top_margin"
+			android:gravity="center"
+			android:minHeight="?actionBarSize"
+			android:text="@string/app_name"
+			android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintTop_toTopOf="@id/pager" />
+
+		<View
+			android:id="@+id/corners"
+			android:layout_width="match_parent"
+			android:layout_height="@dimen/rv_corner"
+			android:background="@drawable/top_rv_corners"
+			app:layout_constraintBottom_toBottomOf="@id/pager" />
+
+		<androidx.recyclerview.widget.RecyclerView
+			android:id="@+id/main_rv"
+			android:layout_width="match_parent"
+			android:layout_height="0dp"
+			android:background="@drawable/bg_rv"
+			app:layout_constraintHeight_percent="1"
+			app:layout_constraintTop_toBottomOf="@id/corners"
+			tools:listitem="@layout/item_card"
+			tools:itemCount="3" />
+	</androidx.constraintlayout.motion.widget.MotionLayout>
 
 	<com.google.android.material.floatingactionbutton.FloatingActionButton
 		android:id="@+id/fab"
