--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,14 +1,9 @@
 <resources>
-	<!-- Default screen margins, per the Android Design guidelines. -->
-	<dimen name="activity_horizontal_margin">16dp</dimen>
-	<dimen name="activity_vertical_margin">16dp</dimen>
-	<dimen name="title_top_margin">48dp</dimen>
-	<dimen name="main_rv_corner">48dp</dimen>
-	<dimen name="appbar_padding">16dp</dimen>
+	<dimen name="title_top_margin">56dp</dimen>
+	<dimen name="app_bar_height">550dp</dimen>
+	<dimen name="rv_corner">48dp</dimen>
 	<dimen name="rv_item_height">400dp</dimen>
 	<dimen name="rv_item_spacing">16dp</dimen>
 	<dimen name="rv_item_corner_radius">24dp</dimen>
 	<dimen name="fab_margin">16dp</dimen>
-	<dimen name="app_bar_height">550dp</dimen>
-	<dimen name="text_margin">16dp</dimen>
 </resources>
