--- a/app/src/main/res/xml/main_scene.xml
+++ b/app/src/main/res/xml/main_scene.xml
@@ -6,7 +6,13 @@
 		<Constraint
 			android:id="@id/pager"
 			android:layout_width="match_parent"
-			android:layout_height="@dimen/app_bar_height"
+			android:layout_height="0dp"
+			app:layout_constraintHeight_percent=".75"
+			app:layout_constraintBottom_toTopOf="parent" />
+		<Constraint
+			android:id="@id/corners"
+			android:layout_width="match_parent"
+			android:layout_height="@dimen/rv_corner"
 			app:layout_constraintBottom_toTopOf="parent" />
 	</ConstraintSet>
 	<Transition
@@ -14,6 +20,7 @@
 		app:constraintSetStart="@id/expanded">
 		<OnSwipe
 			app:dragDirection="dragUp"
+			app:touchAnchorId="@id/main_rv"
 			app:touchAnchorSide="top" />
 		<KeyFrameSet>
 			<KeyAttribute
