--- a/app/src/main/res/drawable/menu_corners.xml
+++ b/app/src/main/res/drawable/menu_corners.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 	<corners
-		android:topLeftRadius="@dimen/rv_corner"
-		android:topRightRadius="@dimen/rv_corner" />
+		android:topLeftRadius="@dimen/menu_corner_radius"
+		android:topRightRadius="@dimen/menu_corner_radius" />
 	<solid android:color="?attr/colorSurface" />
 </shape>
