--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,9 +1,16 @@
 <resources>
-	<dimen name="title_top_margin">56dp</dimen>
+	<dimen name="app_title_margin">56dp</dimen>
 	<dimen name="app_bar_height">550dp</dimen>
-	<dimen name="rv_corner">48dp</dimen>
-	<dimen name="rv_item_height">400dp</dimen>
-	<dimen name="rv_item_spacing">16dp</dimen>
-	<dimen name="rv_item_corner_radius">24dp</dimen>
+	<dimen name="featured_ad_margin">56dp</dimen>
+	<dimen name="featured_ad_subtitle_margin">24dp</dimen>
+	<dimen name="menu_corner_radius">30dp</dimen>
+	<dimen name="menu_corner_radius_neg">-30dp</dimen>
+	<dimen name="menu_tabs_height">90dp</dimen>
+	<dimen name="menu_filter_height">30dp</dimen>
+	<dimen name="menu_item_height">400dp</dimen>
+	<dimen name="menu_item_img_height">200dp</dimen>
+	<dimen name="menu_item_margin">24dp</dimen>
+	<dimen name="menu_item_corner_radius">20dp</dimen>
+	<dimen name="menu_item_inner_spacing">16dp</dimen>
 	<dimen name="fab_margin">16dp</dimen>
 </resources>
