--- a/app/src/main/res/xml/main_scene.xml
+++ b/app/src/main/res/xml/main_scene.xml
@@ -1,36 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<MotionScene xmlns:android="http://schemas.android.com/apk/res/android"
+<MotionScene
+	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto">
 	<ConstraintSet android:id="@+id/expanded" />
 	<ConstraintSet android:id="@+id/collapsed">
 		<Constraint
-			android:id="@id/pager"
+			android:id="@id/featured_ads"
 			android:layout_width="match_parent"
 			android:layout_height="0dp"
+			app:layout_constraintBottom_toTopOf="parent"
 			app:layout_constraintHeight_percent=".75"
-			app:layout_constraintBottom_toTopOf="parent" />
+			app:layout_constraintTop_toTopOf="parent" />
 		<Constraint
-			android:id="@id/corners"
+			android:id="@id/menu_tabs"
 			android:layout_width="match_parent"
-			android:layout_height="@dimen/rv_corner"
-			app:layout_constraintBottom_toTopOf="parent" />
+			android:layout_height="@dimen/menu_tabs_height"
+			android:layout_marginTop="@dimen/menu_corner_radius_neg"
+			app:layout_constraintTop_toTopOf="parent" />
 	</ConstraintSet>
 	<Transition
 		app:constraintSetEnd="@id/collapsed"
 		app:constraintSetStart="@id/expanded">
 		<OnSwipe
 			app:dragDirection="dragUp"
-			app:touchAnchorId="@id/main_rv"
+			app:touchAnchorId="@id/menus"
 			app:touchAnchorSide="top" />
 		<KeyFrameSet>
 			<KeyAttribute
-				app:motionTarget="@id/pager"
+				android:alpha="1"
 				app:framePosition="75"
-				android:alpha="1" />
+				app:motionTarget="@id/featured_ads" />
 			<KeyAttribute
 				android:alpha="0"
 				app:framePosition="100"
-				app:motionTarget="@id/pager" />
+				app:motionTarget="@id/featured_ads" />
 		</KeyFrameSet>
 	</Transition>
 </MotionScene>
