--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,6 @@
 <resources>
 	<dimen name="app_title_margin">56dp</dimen>
-	<dimen name="app_bar_height">550dp</dimen>
+	<dimen name="featured_ad_height">550dp</dimen>
 	<dimen name="featured_ad_margin">56dp</dimen>
 	<dimen name="featured_ad_subtitle_margin">24dp</dimen>
 	<dimen name="menu_corner_radius">30dp</dimen>
