--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,7 @@
 <resources>
+	<!--shared-->
+	<dimen name="fab_margin">16dp</dimen>
+	<!--home-->
 	<dimen name="app_title_margin">56dp</dimen>
 	<dimen name="featured_ad_height">550dp</dimen>
 	<dimen name="featured_ad_margin">56dp</dimen>
@@ -12,5 +15,13 @@
 	<dimen name="menu_item_margin">24dp</dimen>
 	<dimen name="menu_item_corner_radius">20dp</dimen>
 	<dimen name="menu_item_inner_spacing">16dp</dimen>
-	<dimen name="fab_margin">16dp</dimen>
+	<dimen name="badge_height">18dp</dimen>
+	<dimen name="badge_max_width">36dp</dimen>
+	<dimen name="badge_offset">10dp</dimen>
+	<dimen name="badge_offset_neg">-10dp</dimen>
+	<dimen name="badge_h_padding">4dp</dimen>
+	<!--checkout-->
+	<dimen name="cart_h_padding">24dp</dimen>
+	<dimen name="cart_item_height">100dp</dimen>
+	<dimen name="cart_item_spacing">8dp</dimen>
 </resources>
